--- a/vr.html
+++ b/vr.html
@@ -21,7 +21,7 @@
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-sphere position="-1 .5 -3" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky src="R0010056.jpg"></a-sky>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
     </a-scene>
     <a-ring color="teal" radius-inner="1" radius-outer="2"></a-ring>
